chore: switch to open api requests fix: frontend pipeline
