# backend/src/main/java/org/otherband/lifeblood/hospital/HospitalController.java
@@ -1,5 +1,7 @@
 package org.otherband.lifeblood.hospital;
 
+import org.otherband.lifeblood.ApplicationMapper;
+import org.otherband.lifeblood.generated.model.HospitalResponse;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -15,14 +17,19 @@ public class HospitalController {
 
 
     private final HospitalJpaRepository hospitalJpaRepository;
+    private final ApplicationMapper mapper;
 
-    public HospitalController(HospitalJpaRepository hospitalJpaRepository) {
+    public HospitalController(HospitalJpaRepository hospitalJpaRepository, ApplicationMapper mapper) {
         this.hospitalJpaRepository = hospitalJpaRepository;
+        this.mapper = mapper;
     }
 
     @GetMapping
-    public List<HospitalEntity> getAll() {
-        return hospitalJpaRepository.findAll();
+    public List<HospitalResponse> getAll() {
+        return hospitalJpaRepository.findAll()
+                .stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
 }
